db_service series/games updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     build: ./db
     ports:
       - 5432:5432
-    # volumes:
-    #   - postgres_data:/var/lib/postgresql/data/
   backend:
     build: ./backend
     ports:
@@ -15,6 +13,6 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
-      - ./backend:/app   
+      - ./backend:/backend
 volumes:
   postgres_data:
