--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./backend:/backend
+  frontend:
+    build: ./frontend
+    ports:
+      - 3000:80
+    volumes:
+      - ./frontend:/app
   bot:
     build: ./bot
     volumes:
