--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,8 +8,10 @@ RUN pip install --no-cache-dir -r /backend/requirements.txt
 
 COPY ./app /backend/app
 
-RUN chmod +x start.sh
-RUN chmod +x db_live.sh
+RUN apt-get update && apt-get install -y dos2unix \
+    && dos2unix start.sh db_live.sh \
+    && chmod +x start.sh db_live.sh \
+    && apt-get --purge remove -y dos2unix && apt-get -y autoremove
 
 CMD ["sh", "start.sh"]
 
