--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,9 @@ pydantic==1.10.9
 python-dotenv==1.0.0
 Requests==2.31.0
 setuptools==65.5.0
+gspread==5.10.0
+gspread-dataframe==3.3.1
 xgboost
 scikit-learn
 uvicorn
+oauth2client
