add channel/google updates, predicts based on probabilities, changed bot description

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./backend:/backend
-  frontend:
-    build: ./frontend
-    ports:
-      - 3000:80
-    volumes:
-      - ./frontend:/app
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - 3000:80
+  #   volumes:
+  #     - ./frontend:/app
   bot:
     build: ./bot
     volumes:
