--- a/.dockerignore
+++ b/.dockerignore
@@ -4,8 +4,6 @@ venv/
 
 t.txt
 
-notebooks/
-
 app.log
 
 .git
@@ -35,7 +33,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-notebooks/
+data/
 
 .csv*
-train/
