--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,8 @@ services:
     restart: always
     environment:
       - TZ=Europe/Moscow
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
 volumes:
   postgres_data:
