fix fetching predictions

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,8 +9,8 @@ RUN pip install --no-cache-dir -r /backend/requirements.txt
 COPY ./app /backend/app
 
 RUN apt-get update && apt-get install -y dos2unix \
-    && dos2unix start.sh db_live.sh \
-    && chmod +x start.sh db_live.sh \
+    && dos2unix start.sh  \
+    && chmod +x start.sh  \
     && apt-get --purge remove -y dos2unix && apt-get -y autoremove
 
 CMD ["sh", "start.sh"]
